<resources>
    <string name="app_name" translatable="false">Lab5Variant6</string>
    <string name="number_of_liters">No. of liters</string>
    <string name="gasoline_brands_label">Gasoline brand</string>
    <string name="gasoline_brand_92">92 – 50 rub.</string>
    <string name="gasoline_brand_95">95 – 55 rub.</string>
    <string name="gasoline_brand_98">98 – 57 rub.</string>
    <string name="calculate_cost">Calculate cost</string>
    <string name="total_cost">Total cost = %1$.2f rub.</string>
    <string name="numbers_of_liters_not_specified_toast">Specify the number of liters!</string>
    <string name="gasoline_brand_not_selected_toast">Choose a brand of gasoline!</string>
</resources>