<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/number_of_liters_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/number_of_liters_edit_text"
        android:text="@string/number_of_liters"/>

    <EditText
        android:id="@+id/number_of_liters_edit_text"
        android:minWidth="96dp"
        android:minHeight="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/gasoline_brand_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasoline_brands_label"/>

        <RadioButton
            android:id="@+id/gasoline_brand_92_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasoline_brand_92"/>

        <RadioButton
            android:id="@+id/gasoline_brand_95_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasoline_brand_95"/>

        <RadioButton
            android:id="@+id/gasoline_brand_98_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasoline_brand_98"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_cost"
        android:textAllCaps="true"/>

</LinearLayout>